templates/cert-mananger/self-signed/self-signed-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
